--- a/index.html
+++ b/index.html
@@ -44,49 +44,183 @@
         <section class="hero">
             <div id="carouselExampleCaptions" class="carousel slide">
                 <div class="carousel-indicators">
-                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
                 </div>
                 <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="images/banner.png" class="d-block w-100" alt="...">
-                    <div class="carousel-caption mb-5 d-none d-md-block">
-                      <h1>The perfect venue for your <br> next event</h1>
-                      <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. 
-                        Velit officia consequat duis enim velit </p>
-                        <button class="btn btn-light">Book Now</button>
+                    <div class="carousel-item active">
+                        <img src="images/banner.png" class="d-block w-100" alt="...">
+                        <div class="carousel-caption mb-5 d-none d-md-block">
+                            <h1>The perfect venue for your <br> next event</h1>
+                            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+                                Velit officia consequat duis enim velit </p>
+                            <button class="btn btn-light">Book Now</button>
+                        </div>
                     </div>
-                  </div>
-                  <div class="carousel-item">
-                    <img src="images/banner.png" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                      <h5>Second slide label</h5>
-                      <p>Some representative placeholder content for the second slide.</p>
+                    <div class="carousel-item">
+                        <img src="images/banner.png" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Second slide label</h5>
+                            <p>Some representative placeholder content for the second slide.</p>
+                        </div>
                     </div>
-                  </div>
-                  <div class="carousel-item">
-                    <img src="images/banner.png" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                      <h5>Third slide label</h5>
-                      <p>Some representative placeholder content for the third slide.</p>
+                    <div class="carousel-item">
+                        <img src="images/banner.png" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Third slide label</h5>
+                            <p>Some representative placeholder content for the third slide.</p>
+                        </div>
                     </div>
-                  </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
                 </button>
-              </div>
+            </div>
         </section>
     </header>
 
     <main>
+        <section class="moments my-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <img class="img-fluid" src="images/wedding.png" alt="">
+                    </div>
+                    <div class="col-md-6 my-5 align-items-center">
+                        <h2>Every moment is Precious </h2>
+                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor
+                            do amet sint. Velit officia consequat duis enim velit mollit.
+                            Exercitation veniam consequat sunt nostrud amet.</p>
+                        <button class="btn btn-primary">Explore our album</button>
+                    </div>
+                </div>
+            </div>
+        </section>
 
+        <section class="pricing my-5">
+            <div class="container">
+                <div class="row">
+                    <div class="package-heading my-5">
+                        <h2 class="text-center">Our Packages</h2>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="package-info">
+                            <div class="package-price">
+                                <h2>$300</h2>
+                            </div>
+                            <div class="package-name">
+                                <p class="h3">Business Fair</p>
+                            </div>
+                            <div class="package-data">
+                                <p>
+                                    For most businesses event
+
+                                    like book fair, craft fair.
+                                </p>
+                                <ul class="list-unstyled">
+                                    <li>limited space access</li>
+                                    <li>Secuirty facility</li>
+                                    <li>event support</li>
+                                    <li>Decoration design</li>
+                                    <li>Per day bill</li>
+                                </ul>
+                                <button class="btn btn-light">Choose Plan</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="package-info">
+                            <div class="package-price">
+                                <h2>$300</h2>
+                            </div>
+                            <div class="package-name">
+                                <p class="h3">Business Fair</p>
+                            </div>
+                            <div class="package-data">
+                                <p>
+                                    For most businesses event
+
+                                    like book fair, craft fair.
+                                </p>
+                                <ul class="list-unstyled">
+                                    <li>limited space access</li>
+                                    <li>Secuirty facility</li>
+                                    <li>event support</li>
+                                    <li>Decoration design</li>
+                                    <li>Per day bill</li>
+                                </ul>
+                                <button class="btn btn-light">Choose Plan</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="package-info bg-primary text-light py-5 px-4 rounded">
+                            <div class="package-price">
+                                <h2>$300</h2>
+                            </div>
+                            <div class="package-name">
+                                <p class="h3">Business Fair</p>
+                            </div>
+                            <div class="package-data">
+                                <p>
+                                    For most businesses event
+
+                                    like book fair, craft fair.
+                                </p>
+                                <ul class="list-unstyled">
+                                    <li>limited space access</li>
+                                    <li>Secuirty facility</li>
+                                    <li>event support</li>
+                                    <li>Decoration design</li>
+                                    <li>Per day bill</li>
+                                </ul>
+                                <button class="btn btn-light rounded">Choose Plan</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="package-info">
+                            <div class="package-price">
+                                <h2>$300</h2>
+                            </div>
+                            <div class="package-name">
+                                <p class="h3">Business Fair</p>
+                            </div>
+                            <div class="package-data">
+                                <p>
+                                    For most businesses event
+
+                                    like book fair, craft fair.
+                                </p>
+                                <ul class="list-unstyled">
+                                    <li>limited space access</li>
+                                    <li>Secuirty facility</li>
+                                    <li>event support</li>
+                                    <li>Decoration design</li>
+                                    <li>Per day bill</li>
+                                </ul>
+                                <button class="btn btn-light">Choose Plan</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="clients">
+            
+        </section>
     </main>
     <footer>
 
